tests/valid/pointers/pointer_declaration.rs
/*
executionExitCode: 0
*/


main(): i32 {
    a: *i32 = 0;
    return 0;
}
