tests/invalid/pointers/deref_non_pointer.rs
/*
compilationExitCode: 3
*/


main(): i32 {
    a: i32 = 0;
    return *a;
}
